--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,16 @@
         "fstream": "cpp",
         "thread": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "complex": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "optional": "cpp",
+        "regex": "cpp",
+        "set": "cpp",
+        "iostream": "cpp",
+        "typeindex": "cpp"
     },
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "xmlTools.splitXmlnsOnFormat": false
 }
