--- a/platformio.custom.ini
+++ b/platformio.custom.ini
@@ -220,8 +220,8 @@ build_flags =
   -D KNX_SERIAL=Serial2
  # -D LED_BUILTIN=2
  # -D PROG_LED_PIN=LED_BUILTIN
-  -D PROG_LED_PIN=9
-  -D PROG_LED_PIN_ACTIVE_ON=HIGH
+   -D PROG_LED_PIN=18
+   -D PROG_LED_PIN_ACTIVE_ON=HIGH
  # -D PROG_BUTTON_PIN=38
  -D PROG_BUTTON_PIN=10
 
@@ -231,6 +231,8 @@ build_flags =
   ${ESP32_custom.build_flags}
   ${develop_ESP.build_flags}
   ${board_AZDelivery_ESP32_Dev_Kit_C_V4.build_flags}
+  -D SHUTTER_CONTROLLER_MODULE
+    -fexceptions
 lib_deps = 
   ${custom.lib_deps}
   ${ESP32_custom.lib_deps}
@@ -238,6 +240,7 @@ lib_deps =
  
 [env:develop_AZDelivery_ESP32_Dev_Kit_C_V4_USB]
 extends = env:develop_AZDelivery_ESP32_Dev_Kit_C_V4, ESP32_UPLOAD_USB
+
 
 [env:develop_AZDelivery_ESP32_Dev_Kit_C_V4_OTA]
 extends = env:develop_AZDelivery_ESP32_Dev_Kit_C_V4
@@ -294,6 +297,13 @@ lib_deps =
 
 [env:develop_Adafruit_Feather_ESP32_V2_USB]
 extends = env:develop_Adafruit_Feather_ESP32_V2, ESP32_UPLOAD_USB
+
+
+[env:develop_Adafruit_Feather_ESP32_V2_USB_ShutterController]
+extends = env:develop_Adafruit_Feather_ESP32_V2, ESP32_UPLOAD_USB
+build_flags =
+  ${env:develop_Adafruit_Feather_ESP32_V2.build_flags}
+  -D SHUTTER_CONTROLLER_MODULE
 
 [env:release_Adafruit_Feather_ESP32_V2_USB]
 extends = ESP32_custom, ESP32_libs, releases_ESP, board_Adafruit_Feather_ESP32_V2, ESP32_UPLOAD_USB
