--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,139 @@
 {
-    "label": "Generate Dependencies.txt",
-    "type": "shell",
-    "command": "lib/OGM-Common/scripts/setup/reusable/Build-Dependencies.ps1",
-    "args": [
-    ],
-    "problemMatcher": [],
-    "group": "test"
+	"version": "2.0.0",
+	"tasks": [
+        {
+            "label": "Generate Dependencies.txt",
+            "type": "shell",
+            "command": "lib/OGM-Common/scripts/setup/reusable/Build-Dependencies.ps1",
+            "args": [
+            ],
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "label": "OpenKNXproducer (RP2040 DEV)",
+            "type": "shell",
+            "command": "~/bin/OpenKNXproducer.exe",
+            "args": [
+                "create",
+                "--Debug",
+                "-h",
+                "include/knxprod.h",
+                "src/InternetServicesRP2040-Dev"
+            ],
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "label": "OpenKNXproducer (ESP32 DEV)",
+            "type": "shell",
+            "command": "~/bin/OpenKNXproducer.exe",
+            "args": [
+                "create",
+                "--Debug",
+                "-h",
+                "include/knxprod.h",
+                "src/InternetServicesESP32-Dev"
+            ],
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "label": "Develop: RP2040 REG1_ETH_V1",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_REG1_ETH_V1"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "Develop: RP2040 REG1_ETH_V1 (USB)",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_REG1_ETH_V1_USB",
+                "upload"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "Develop: RP2040 REG1_ETH_V1 (JLINK)",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_REG1_ETH_V1_JLINK",
+                "upload"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        /*
+        {
+            "label": "Develop: RP2040 PiPico_BCU_Connector",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_PiPico_BCU_Connector"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        */
+        {
+            "label": "Develop: Adafruit_Feather_ESP32_V2",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_Adafruit_Feather_ESP32_V2"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "Develop: Adafruit_Feather_ESP32_V2 (USB)",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_Adafruit_Feather_ESP32_V2_USB",
+                "upload"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        /*
+        {
+            "label": "Adafruit_Feather_ESP32_V2 (JLINK)",
+            "type": "shell",
+            "command": "scripts/OpenKNX-Build.ps1",
+            "args": [
+                "develop_Adafruit_Feather_ESP32_V2_JLINK",
+                "upload"
+            ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        */        
+        {
+            "label": "Build-DEV-Release",
+            "type": "shell",
+            "command": "scripts/Build-Release.ps1", 
+            "args": [
+            ],
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "label": "Build-Release",
+            "type": "shell",
+            "command": "scripts/Build-Release.ps1", 
+            "args": [
+                "Release"
+            ],
+            "problemMatcher": [],
+            "group": "test"
+        }
+	]
 }
